# dv-metadata-updater

./: .env.example  .gitignore  LICENSE  README.md  config-template.json  config.json  dataset-email-generator.py  dataset-metadata-assessment.py  dataset-metadata-remediation.py  dataset-metadata-updater.py  funder-map-primary.csv  pyproject.toml  ror-metadata-retrieval.py  sandbox-metadata-updater.py  tcdl-quick-stats.ipynb  utils.py  workflow-summary.py
docs/: tdr-recuration-faq.docx
